style form buttons more neatly

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -52,6 +52,10 @@
   padding-left: 10px;
 }
 
+.record-pane section h3 .btn.pull-right {
+  margin: 6px 6px 0 0;
+}
+
 .linker-list {
   max-height: 240px;
 }
@@ -213,6 +217,10 @@
     margin: 0;
     border-bottom: 1px solid #DDD;
     .border-radius(4px 4px 0 0);
+  }
+
+  .subform-remove {
+    margin: 6px 6px 0 0;
   }
 
   .subform-container {
