Add extra rules to validate source/authority_id/rules fields.
This required refactoring the way JSONModel handles custom validations.

--- a/frontend/app/views/agents/name_forms/_agent_corporate_entity.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_corporate_entity.html.erb
@@ -1,5 +1,8 @@
 <div class="agent-name-fields">
   <%= f.label_field_pair :authority_id %>
+  <%= f.label_field_pair :source %>
+  <%= f.label_field_pair :rules %>
+  <hr/>
   <%= f.label_field_pair :primary_name %>
   <%= f.label_field_pair :subordinate_name_1 %>
   <%= f.label_field_pair :subordinate_name_2 %>
