--- a/frontend/app/views/agents/name_forms/_agent_family.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_family.html.erb
@@ -1,5 +1,8 @@
 <div class="agent-name-fields">
   <%= f.label_field_pair :authority_id %>
+  <%= f.label_field_pair :source %>
+  <%= f.label_field_pair :rules %>
+  <hr/>
   <%= f.label_field_pair :prefix %>
   <%= f.label_field_pair :family_name %>
   <%= f.label_field_pair :dates %>
