--- a/_yard/templates/default/method_details/html/specs.erb
+++ b/_yard/templates/default/method_details/html/specs.erb
@@ -1,6 +1,6 @@
 <% if object[:specifications] %>
 <div class="tags">
-  <h2>XXXSpecifications:</h2>
+  <h2>Specifications:</h2>
   <ul class="specs">
     <% for spec in object[:specifications] %>
       <li><%= spec[:name] %>
