added Gemfile and ant task for _yardoc

--- a/_yard/API.erb
+++ b/_yard/API.erb
@@ -3,7 +3,7 @@ As of <%= @time.inspect %> the following REST endpoints exist:
 
 <% @endpoints.each do | e | %>
 	
-## <%= e[:uri]%> 
+## <%= e[:method].upcase%> <%= e[:uri]%> 
 
 ### Description
 
