--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,17 +1,14 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index),"Edit Accession \"#{@accession.title}\""]} %>
-<div class="row-fluid">
-   <div class="span3">
-      <p>This is where the tree will go. Perhaps not for a editing an Accession.</p>
-   </div>
-   <div class="span9 record-pane">
+
+<%= form_for @accession, :as => "accession", :url => {:action => :update, :id => @accession.id}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
+  <div class="row-fluid">
+    <div class="span3">
+      <%= render :partial => "sidebar" %>
+    </div>
+    <div class="span9 record-pane">
       <h2>Edit Accession "<%= @accession.title%>"</h2>
-      <%= form_for @accession, :as => "accession", :url => {:action => :update, :id => @accession.id}, :html => {:class => 'form-horizontal'} do |f| %>
-         <input type="hidden" name="_method" value="put" />
-         <%= render :partial => "accessions/form", :locals => {:f => f} %>
-         <div class="form-actions">            
-            <button type="submit" class="btn btn-primary">Save Accession</button>
-            <%= link_to "Cancel", :back, :class => "btn" %>
-         </div>
-      <% end %>
-   </div>
-</div>
+      <input type="hidden" name="_method" value="put" />
+      <%= render :partial => "accessions/form", :locals => {:f => f} %>
+    </div>
+  </div>
+<% end %>
