added support for plain text schema documentation

--- a/_yard/templates/default/schema/html/schema.erb
+++ b/_yard/templates/default/schema/html/schema.erb
@@ -26,6 +26,8 @@
           </td>
         </tr>
       </table>
+			<br />
+			<span><a href="<%= @schema[:name].to_s %>.txt">Plain Text Version</a></span>
 			</div>
 
 
