Some consistency fixes for the new group forms:
  * Use the record type tags where appropriate

  * Include breadcrumbs

  * use btn-cancel for the cancel buttons

  * Adjust case on titles

--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -6,7 +6,7 @@
       <%= render :partial => "sidebar" %>
     </div>
     <div class="span9 record-pane">
-      <h2>Edit Accession "<%= @accession.title%>"</h2>
+      <h2>Edit Accession "<%= @accession.title%>" <span class="label label-info">Accession</span></h2>
       <input type="hidden" name="_method" value="put" />
       <%= render :partial => "accessions/form", :locals => {:f => f} %>
     </div>
