--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -6,7 +6,7 @@
       <%= render :partial => "sidebar" %>
     </div>
     <div class="span9 record-pane">
-      <h2>New Accession</h2>
+      <h2>New Accession  <span class="label label-info">Accession</span></h2>
       <%= render :partial => "accessions/form", :locals => {:f => f} %>
     </div>
   </div>
