--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -21,5 +21,5 @@
 
 <div class="form-actions">
   <input type="submit" class="btn btn-primary" value="Save group" />
-  <%= link_to "Cancel", {:controller => :groups, :action => :index}, :class => "btn btn-secondary" %>
+  <%= link_to "Cancel", {:controller => :groups, :action => :index}, :class => "btn btn-secondary btn-cancel" %>
 </div>
