--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 
          <div class="form-actions">
             <button id="create_account" type="submit" class="btn btn-primary">Create account</button>
-            <%= link_to "Cancel", {:controller => :welcome}, :class => "btn" %>
+            <%= link_to "Cancel", {:controller => :welcome}, :class => "btn btn-cancel" %>
          </div>
       <% end %>
    </div>
