--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -1,3 +1,5 @@
+<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Manage Groups", :controller => :groups, :action => :index), "Edit Group"]} %>
+
 <%= render "shared/form_messages", :object => @group %>
 
 <div class="row-fluid">
@@ -5,7 +7,7 @@
   </div>
 
   <div class="span9 record-pane">
-    <h2>Editing group: <%= @group.description %></h2>
+    <h2><%= @group.description %> <span class="label label-info">Group</span></h2>
 
     <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
    
