--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -1,9 +1,11 @@
+<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Manage Groups"]} %>
+
 <div class="row-fluid">
    <div class="span3">
    </div>
 
    <div class="span9 record-pane">
-     <h2>Manage groups</h2>
+     <h2>Manage Groups</h2>
 
      <table class="table table-striped table-bordered table-condensed">
        <thead>
