--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -44,7 +44,7 @@
             <li class="dropdown admin-container">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Manage groups", :controller => :groups, :action => :index %></li>
+                <li><%= link_to "Manage Groups", :controller => :groups, :action => :index %></li>
               </ul>
             </li>
           </ul>         
