--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -5,33 +5,46 @@
    </div>
    <div class="span9 record-pane">
       <div class="btn-group">
-        
+        <div class="btn-group">
+          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            Create Agent
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
+            <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
+            <li><%= link_to "Corporate Entity", :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
+            <li><%= link_to "Software", :controller => :agents, :action => :new, :type => :agent_software %></li>
+          </ul>
+        </div>
       </div>
+
+      <h2>Agents</h2>
+
       <% if not @agents.blank? %>
-         <h2>Agents</h2>
-         <table class="table table-striped table-bordered table-condensed">
-           <thead>
+       <table class="table table-striped table-bordered table-condensed">
+         <thead>
+           <tr>
+             <th>Sort Name</th>
+             <th>Type</th>
+             <th width="70px"><!-- actions --></th>
+           </tr>
+         </thead>
+         <tbody>
+          <% @agents.each do |agent| %>
              <tr>
-               <th>Sort Name</th>
-               <th>Type</th>
-               <th width="70px"><!-- actions --></th>
-             </tr>
-           </thead>
-           <tbody>
-            <% @agents.each do |agent| %>
-               <tr>
-                <td><%= agent.names[0]["sort_name"] %></td>
-                <td><%= I18n.t("agent.agent_type.#{agent.agent_type}") %></td>
-                <td>
-                   <div class="btn-group" style="float: right">
-                     <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
-                     <%= link_to "View", {:controller => :agents, :action => :show, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
-                   </div>
-                </td>
-              </tr>
-            <% end %>
-           </tbody>
-         </table>
+              <td><%= agent.names[0]["sort_name"] %></td>
+              <td><%= I18n.t("agent.agent_type.#{agent.agent_type}") %></td>
+              <td>
+                 <div class="btn-group" style="float: right">
+                   <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
+                   <%= link_to "View", {:controller => :agents, :action => :show, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
+                 </div>
+              </td>
+            </tr>
+          <% end %>
+         </tbody>
+       </table>
       <% else %>
          <p class="alert alert-info">
             No Agents.
