--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -41,12 +41,14 @@
                 </li>
               </ul>
             </li>
-            <li class="dropdown admin-container">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Groups", :controller => :groups, :action => :index %></li>
-              </ul>
-            </li>
+            <% if user_can?('manage_repository') %>
+              <li class="dropdown admin-container">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Groups", :controller => :groups, :action => :index %></li>
+                </ul>
+              </li>
+            <% end %>
           </ul>         
           <% end %>
           <ul class="nav pull-right">
