WIP: add date forms to frontend and rejig date_type to include expression

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -12,6 +12,16 @@
 .control-group {
   margin: 0 !important;
   padding: 4px 0;
+  .accordion {
+    margin-bottom: 0;
+    .accordion-body {
+      margin-left: -180px;
+      .accordion-inner {
+        background-color: #fafafa;
+        border-bottom: 1px solid #E5E5E5;
+      }
+    }
+  }
 }
 
 .control-group.active {
