--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -27,7 +27,28 @@
   </div>
 </section>
 
+
+<section id="dates">
+  <h3>
+    Dates
+    <input type="button" class="btn btn-small pull-right" value="Add Date"/>
+  </h3>
+  <div id="dates_container">
+    <% if @accession.dates.blank? %>
+      <p class="alert alert-info">Click 'Add Date' to add a date record.</p>
+    <% else %>
+      <% @accession.dates.each do | date | %>
+        <% f.with_jsonmodel("dates[]", date, :date) do %>
+          <%= render :partial => "dates/form", :locals => {:f => f} %>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+</section>
+
+
 <%= render :partial => "extent/template", :locals => {:f => f} %>
+<%= render :partial => "dates/template", :locals => {:f => f} %>
 
 <div class="form-actions">            
   <button type="submit" class="btn btn-primary">Save Accession</button>
