--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -2,6 +2,7 @@
   <ul class="nav nav-list affix as-nav-list" data-spy="affix">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
     <li><a href="#extent">Extent <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#dates">Dates <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
