Refactor accordions on show pages; display date info on accession show page;

--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -43,10 +43,10 @@
            </div>
         </div>
         <% end %>
-
       </section>
 
-
       <%= render :partial => "extent/show", :locals => { :extents => @accession.extents } %>
+      <%= render :partial => "dates/show", :locals => { :dates => @accession.dates } %>
+
    </div>
 </div>
