--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -131,12 +131,27 @@ h2 > .label {
 
 /* accordion styles */
 .accordion {
+  &.details {
+    .accordion-body {
+      background-color: #fafafa;      
+      &.in {
+        padding-top: 8px;
+        border-top: 1px solid #E5E5E5;
+      }
+    }
+  }
+  .accordion-body.collapse {
+    border-top: none;
+  }
   .accordion-toggle {
     .icon-chevron-down {
       display: block;
     }
     .icon-chevron-right {
       display: none;
+    }
+    &.row-fluid {
+      padding-bottom: 0;
     }
     &.collapsed {
       .icon-chevron-down {
