--- a/frontend/app/views/dates/_form.html.erb
+++ b/frontend/app/views/dates/_form.html.erb
@@ -2,7 +2,7 @@
   <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
   <div class="date-container">
     <%= f.label_field_pair :label %>
-    <div class="control-group">
+    <div class="control-group <%= f.error_classes(:date_type) %>">
       <label class="control-label"><%= I18n.t("accession.dates.date_type")%></label>
       <div class="controls">
         <div class="accordion controls-accordion date-type-accordion" id="date_type_<%= index %>">
