Return an empty array if jsonmodel property is of type array and is nil

--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -2,7 +2,9 @@
   <ul class="nav nav-list affix as-nav-list" data-spy="affix">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
     <li><a href="#extent">Extent <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#dates">Dates <span class="icon-chevron-right"></span></a></li>
+    <% if @accession.dates.length > 0 %>
+      <li><a href="#dates">Dates <span class="icon-chevron-right"></span></a></li>
+    <% end %>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
